# Pillowtome

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  HANDOFF.md  LICENSE  README.md  harness.html  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md
.planning/debug/resolved/: cdp-eval.mjs  sandbox-iframe-test-srcdoc.html  sandbox-iframe-test.html  selection-bubble-not-showing.md
.planning/phases/01-foundation-cross-platform-skeleton/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-epub-reading-core/: 02-00-PLAN.md  02-00-SUMMARY.md  02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-RESEARCH.md  02-UI-SPEC.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-cjk-typography-differentiation/: 03-00-PLAN.md  03-00-SUMMARY.md  03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-PATTERNS.md  03-RESEARCH.md  03-UAT.md  03-UI-SPEC.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-local-library/: 04-00-PLAN.md  04-00-SUMMARY.md  04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-RESEARCH.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/phases/05-annotations-composite-locator/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-04-PLAN.md  05-04-SUMMARY.md  05-05-PLAN.md  05-06-PLAN.md  05-06-SUMMARY.md  05-07-PLAN.md  05-07-SUMMARY.md  05-08-PLAN.md  05-CONTEXT.md  05-DEVICE-GATE-FINDINGS.md  05-DISCUSSION-LOG.md  05-PATTERNS.md  05-RESEARCH.md  05-UI-SPEC.md  05-VALIDATION.md
.planning/phases/07-webdav-self-hosted-sync/: 07-00-PLAN.md  07-00-SUMMARY.md  07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-03-PLAN.md  07-03-SUMMARY.md  07-04-PLAN.md  07-04-SUMMARY.md  07-CONTEXT.md  07-DISCUSSION-LOG.md  07-RESEARCH.md  07-UI-SPEC.md  07-VALIDATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
core/: Cargo.toml
core/src/: error.rs  lib.rs  locator.rs  protection.rs  source.rs
core/src/publication/: epub_meta.rs  mod.rs
core/src/sync/: fileplane.rs  merge.rs  mod.rs  model.rs  remote.rs
core/tests/: protection.rs
core/tests/fixtures/: README.md  adept.epub  clean.epub  corrupt.epub  font-obfuscated.epub  gen_fixtures.py
docs/: ANDROID-BUILD.md  MAJOR-READER-POS.md  READER-PHASE4-PLAN.md  READER-PHASE5-ANNOTATIONS-PLAN.md
docs/decisions/: DEC-001-license-cleanroom.md  DEC-002-webview-engine.md  DEC-003-drm-policy.md  DEC-004-android-saf-mechanism.md
mockups/: app.js  index.html  styles.css
public/pdfjs/: pdf-polyfills.js  pdf.worker.entry.mjs
scripts/: build-android-release.bat  build-android.bat  build-pc.bat  capture-pc.ps1  cargo-check.bat  check-build.ps1  cjk-golden.mjs  fonts-woff2.py  kill-emulator.ps1  start-emulator.bat  ui-audit.mjs  who-build.ps1
scripts/acceptance/: cdp-lib.mjs  gen-big-book.py  probe-fonts.mjs  run.mjs
specs/: reader-experience.txt
src/: App.css  App.tsx  index.css  main.tsx  vendor-foliate-js.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/fonts/noto-cjk/: NOTICE
src-tauri/assets/sample/: LICENSE.txt  PLACEHOLDER.md  gen_sample.py  sample.epub
src-tauri/capabilities/: android.json  default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  covers.rs  fonts.rs  lib.rs  main.rs  migrations.rs  protocol.rs  storage.rs  update.rs
src-tauri/src/sync/: commands.rs  credentials.rs  fileplane.rs  mod.rs  reconcile.rs  transport.rs
src-tauri/tests/: migration.rs  protocol_range.rs  sync_e2e.rs  sync_fileplane.rs  sync_pending_uploads.rs  sync_reconcile.rs  sync_transport.rs  update_check.rs
src-tauri/tests/common/: mod.rs
src/components/: UpdateDialog.tsx
src/components/ui/: scroll-area.tsx
src/harness/: main.tsx  tauri-mock.ts
src/lib/: css-unwrap-layers.test.ts  css-unwrap-layers.ts  pillow.ts  shell-fonts.ts  update.ts  webview-shims.test.ts  webview-shims.ts
src/reader/: AnnotationsSheet.tsx  ContinuousScrollStream.tsx  FoliateView.tsx  NoteEditorSheet.tsx  ProgressBar.tsx  ReaderBottomBar.tsx  ReaderChrome.tsx  ReaderTapZones.tsx  SearchSheet.tsx  SelectionBubble.tsx  SettingsSheet.tsx  SyncUndoDialog.tsx  TocSheet.tsx  anchor-resolver.test.ts  anchor-resolver.ts  annotation-store.test.ts  annotation-store.ts  apply-reading-styles.test.ts  apply-reading-styles.ts  cjk-autospace-shim.test.ts  cjk-autospace-shim.ts  cjk-content-transform.ts  cjk-convert-shim.test.ts  cjk-convert-shim.ts  cjk-feature-detect.test.ts  cjk-feature-detect.ts  cjk-kinsoku.test.ts  cjk-kinsoku.ts  css-highlight.test.ts  css-highlight.ts  error-card.tsx  foliate-types.ts  fonts.test.ts  fonts.ts  locator-store.test.ts  locator-store.ts  paginator-motion.test.ts  paginator-motion.ts  position-bus.test.ts  position-bus.ts  (+21 more)
src/sync/: SyncSettingsSheet.tsx  SyncStatusButton.tsx  scheduler.test.ts  scheduler.ts  sync-api.ts  sync-form.test.ts  sync-form.ts  sync-status.test.ts  sync-status.ts
src/theme/: mui.ts
tests/fixtures/cjk/: coverage-sheet.html  kinsoku-samples.html
tests/fixtures/cjk/golden/: README.md
