[package]
name = "pillowtome"
version = "0.1.0"
description = "枕籍 (Pillowtome) — cross-platform Chinese-first e-book reader."
authors = ["Pillowtome"]
edition = "2021"
license = "MIT"

[lib]
# The `_lib` suffix keeps the lib name distinct from the bin name (required on
# Windows, see rust-lang/cargo#8519). Integration tests link against this crate.
name = "pillowtome_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
# Exact pins only (supply-chain zero-trust baseline). Cargo.lock is committed.
tauri = { version = "=2.11.5", features = [] }
tauri-plugin-sql = { version = "=2.4.0", features = ["sqlite"] }
# Desktop file picker for import (matches the JS @tauri-apps/plugin-dialog 2.7.1).
tauri-plugin-dialog = "=2.7.1"
pillowtome-core = { path = "../core" }
serde = { version = "=1.0.228", features = ["derive"] }
tauri-plugin-opener = "=2.5.4"
# WebDAV transport (SYNC-01..05): high-level PROPFIND/GET/PUT/MKCOL; conditional
# headers / chunking / Range go through its public `agent` (07-RESEARCH Pattern 3).
reqwest_dav = "=0.3.3"
# OS keychain for the WebDAV password (SYNC-01 — password never in SQLite/IPC/logs).
keyring = { version = "=4.1.5", features = ["android-native-keyring-store"] }

# Android SAF (FND-03): picker + persistable URI grants. Audited + exact-pinned
# per docs/decisions/DEC-004-android-saf-mechanism.md (=28.2.2, the soaked
# release; NOT 28.4.0). Default features only (`commands`) — the
# `legacy_storage_permission*` and `notification_permission` features are left
# OFF so the plugin's build.rs injects NO extra <uses-permission> (mitigation
# #3). Target-gated: desktop never links this crate.
[target.'cfg(target_os = "android")'.dependencies]
tauri-plugin-android-fs = "=28.2.2"

[dev-dependencies]
# Off-device migration smoke test only. Pinned to the SAME sqlx the
# tauri-plugin-sql plugin resolves (0.8.6 -> libsqlite3-sys 0.30.1) so no second
# SQLite binding is linked (Pitfall 6 / single binding). tokio drives the async
# sqlx test; the same 1.52.3 is already in the workspace Cargo.lock via sqlx.
sqlx = { version = "=0.8.6", default-features = false, features = ["runtime-tokio", "sqlite"] }
tokio = { version = "=1.52.3", default-features = false, features = ["macros", "rt"] }
# Off-device WebDAV transport test server (Wave 1 transport tests; 07-RESEARCH Don't Hand-Roll).
wiremock = "=0.6.5"
