[package]
name = "pillowtome"
version = "1.0.0"
description = "枕籍 (Pillowtome) — cross-platform Chinese-first e-book reader."
authors = ["Pillowtome"]
edition = "2021"
license = "MIT"

[lib]
# The `_lib` suffix keeps the lib name distinct from the bin name (required on
# Windows, see rust-lang/cargo#8519). Integration tests link against this crate.
name = "pillowtome_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
# Exact pins only (supply-chain zero-trust baseline). Cargo.lock is committed.
tauri = { version = "=2.11.5", features = [] }
tauri-plugin-sql = { version = "=2.4.0", features = ["sqlite"] }
# Desktop file picker for import (matches the JS @tauri-apps/plugin-dialog 2.7.1).
tauri-plugin-dialog = "=2.7.1"
pillowtome-core = { path = "../core" }
serde = { version = "=1.0.228", features = ["derive"] }
tauri-plugin-opener = "=2.5.4"
# WebDAV transport (SYNC-01..05): high-level PROPFIND/GET/PUT/MKCOL; conditional
# headers / chunking / Range go through its public `agent` (07-RESEARCH Pattern 3).
reqwest_dav = "=0.3.3"
# Direct edge on the same locked reqwest 0.13.4 reqwest_dav resolves (needed to
# name `reqwest::Client`/`reqwest::Url` for the injected agent, 07-01 Task 2) —
# dep edge only, no new package, no second version (D-13). The `stream` feature
# (07-03) enables `Body::from(tokio::fs::File)` so book uploads stream from disk
# instead of buffering — feature edge only, still the same locked crate.
reqwest = { version = "=0.13.4", features = ["stream"] }
# tokio `time` feature for the 503/429 exponential backoff (07-01 Task 2) — same
# locked 1.52.3 as the dev-dependency; feature edge only. 07-03 adds `fs` +
# `io-util` for the file plane (streamed upload bodies, bounded chunk reads,
# .part appends, 64KB hash loop) — feature edges only, no new package (D-13).
tokio = { version = "=1.52.3", features = ["time", "fs", "io-util"] }
# Shared SQLite pool access for sync_config (07-01 Task 4): promoted from
# dev-dependencies. Same sqlx 0.8.6 tauri-plugin-sql resolves — the plugin's
# `DbInstances` pool is reused, no second SQLite binding (Pitfall 6).
sqlx = { version = "=0.8.6", default-features = false, features = ["runtime-tokio", "sqlite"] }
# OS keychain for the WebDAV password (SYNC-01 — password never in SQLite/IPC/logs).
keyring = { version = "=4.1.5", features = ["android-native-keyring-store"] }
# State-plane JSON (07-02): DeviceStateFile (de)serialization lives in src-tauri —
# core carries no serde_json runtime dep. Same pin as the locked dev edge; one
# manifest entry, promoted from dev-dependencies (no new package, D-13).
serde_json = "=1.0.150"
# State-plane ids (07-02): tmp-<uuid> publish names, 冲突副本 copy ids, placeholder
# item_ids, change_log row ids. Same locked 1.23.4 core already pins — dep edge only.
uuid = { version = "=1.23.4", features = ["v4"] }
# Download integrity gate (07-03, D-100): streamed blake3 of the received .part
# must equal the work_id (work_id IS the blake3 hex). Same locked 1.8.5
# pillowtome-core already pins — dep edge only, zero new packages (D-13).
blake3 = "=1.8.5"

# Android SAF (FND-03): picker + persistable URI grants. Audited + exact-pinned
# per docs/decisions/DEC-004-android-saf-mechanism.md (=28.2.2, the soaked
# release; NOT 28.4.0). Default features only (`commands`) — the
# `legacy_storage_permission*` and `notification_permission` features are left
# OFF so the plugin's build.rs injects NO extra <uses-permission> (mitigation
# #3). Target-gated: desktop never links this crate.
[target.'cfg(target_os = "android")'.dependencies]
tauri-plugin-android-fs = "=28.2.2"
# SYNC-01 Android keychain (07-01 grounding discovery): keyring 4.1.5's v1 facade
# registers NO store on Android (`Entry::new` would fail `NoDefaultStore`), so
# sync/credentials.rs registers the named store as the keyring_core default
# itself. Both crates are already in Cargo.lock via keyring's
# android-native-keyring-store feature — dep edges only, no new packages (D-13).
android-native-keyring-store = "=1.0.0"
keyring-core = "=1.0.0"
# UPD-01 TLS init (rustls-platform-verifier on Android panics uninitialized —
# any reqwest HTTPS call dies, incl. check_update AND https WebDAV sync). All
# three edges are already locked in Cargo.lock (via reqwest 0.13.4 /
# tauri-plugin-android-fs) — dep edges only, no new packages (D-13). The
# `jni` pin MUST match rustls-platform-verifier 0.7.0's own (types cross
# the `init_with_env` boundary). The AAR for `CertificateVerifier` is wired
# in gen/android/app/build.gradle.kts (see ANDROID-BUILD.md § TLS).
rustls-platform-verifier = "=0.7.0"
jni = "=0.22.4"
ndk-context = "=0.1.1"

[dev-dependencies]
# tokio drives the async sqlx/wiremock tests (macros + rt); the same 1.52.3 is
# also a main dependency with the `time` feature (sync backoff) — one crate,
# unified features.
tokio = { version = "=1.52.3", default-features = false, features = ["macros", "rt"] }
# Off-device WebDAV transport test server (Wave 1 transport tests; 07-RESEARCH Don't Hand-Roll).
wiremock = "=0.6.5"
